# copier_template

./: LICENSE  README.md  copier.yml  docker-compose.jinja  main.py  pyproject.toml  template.py
